--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -21,6 +21,14 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+        
+      - name: Make dummy zips
+        run: |
+          touch terraform/active-fire-monitor.zip
+          touch terraform/area-restrictions-monitor.zip
+          touch terraform/bans-and-prohibitions-monitor.zip
+          touch terraform/evacuation-orders-monitor.zip
+          touch terraform/python.zip
 
       - uses: hashicorp/setup-terraform@v2
         with:
