Update camping icon

--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.config.json
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.config.json
@@ -135,7 +135,7 @@
         {
           "label": "The size of a Campfire",
           "value": "campfire",
-          "icon": "fireplace"
+          "icon": "camping"
         },
         {
           "label": "The size of a House",
