--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -24,12 +24,13 @@ jobs:
         
       - name: Make dummy zips
         run: |
-          mkdir terraform/lambda-functions
+          pwd
           touch terraform/lambda-functions/active-fire-monitor.zip
           touch terraform/lambda-functions/area-restrictions-monitor.zip
           touch terraform/lambda-functions/bans-and-prohibitions-monitor.zip
           touch terraform/lambda-functions/evacuation-orders-monitor.zip
           touch terraform/lambda-functions/python.zip
+          ls -la terraform
 
       - uses: hashicorp/setup-terraform@v2
         with:
