--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Make dummy zips
         run: |
           pwd
+          mkdir terraform/lambda-functions
           touch terraform/lambda-functions/active-fire-monitor.zip
           touch terraform/lambda-functions/area-restrictions-monitor.zip
           touch terraform/lambda-functions/bans-and-prohibitions-monitor.zip
