--- a/.github/workflows/terragrunt-plan.yml
+++ b/.github/workflows/terragrunt-plan.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Make dummy zips
         run: |
           pwd
-          touch terraform/lambda-functions/active-fire-monitor.zip
-          touch terraform/lambda-functions/area-restrictions-monitor.zip
-          touch terraform/lambda-functions/bans-and-prohibitions-monitor.zip
-          touch terraform/lambda-functions/evacuation-orders-monitor.zip
-          touch terraform/lambda-functions/python.zip
+          touch terraform/active-fire-monitor.zip
+          touch terraform/area-restrictions-monitor.zip
+          touch terraform/bans-and-prohibitions-monitor.zip
+          touch terraform/evacuation-orders-monitor.zip
+          touch terraform/python.zip
           ls -la terraform
 
       - uses: hashicorp/setup-terraform@v2
