--- a/server/wfone-notification-push-api/wfone-notification-push-api-rest-endpoints/src/main/resources/application.properties
+++ b/server/wfone-notification-push-api/wfone-notification-push-api-rest-endpoints/src/main/resources/application.properties
@@ -1,21 +1,18 @@
-wfone.datasource.url=#{wfone.datasource.url}
-wfone.datasource.username=#{wfone.datasource.username}
-wfone.datasource.max.connections=#{wfone.datasource.max.connections}
-wfone.push.item.expire.hours.evacuation=#{wfone.push.item.expire.hours.evacuation}
-wfone.push.item.expire.hours.fire=#{wfone.push.item.expire.hours.fire}
-wfone.push.item.expire.hours.ban=#{wfone.push.item.expire.hours.ban}
-wfone.push.item.expire.hours.restricted.area=#{wfone.push.item.expire.hours.restricted.area}
-wfone.aws.sqs.queue.public.mobile.notification.url=#{wfone.aws.sqs.queue.public.mobile.notification.url}
-wfone.aws.sqs.queue.public.mobile.notification.monitor.attribute=#{wfone.aws.sqs.queue.public.mobile.notification.monitor.attribute}
-wfone.aws.sqs.queue.receive.max.num.messages=#{wfone.aws.sqs.queue.receive.max.num.messages}
-wfone.aws.sqs.queue.receive.wait.time.seconds=#{wfone.aws.sqs.queue.receive.wait.time.seconds}
-wfone.aws.sqs.queue.s3.bucket.name=#{wfone.aws.sqs.queue.s3.bucket.name}
-wfone.aws.access.key=#{wfone.aws.access.key}
-wfone.aws.secret.key=#{wfone.aws.secret.key}
-push.notification.event.consumer.interval.seconds=#{push.notification.event.consumer.interval.seconds}
-push.notification.prefix=#{push.notification.prefix}
-firebase.db.url=#{firebase.db.url}
-private_key_id=#{private_key_id}
-client_id=#{client_id}
-client_x509_cert_url=#{client_x509_cert_url}
+wfone.datasource.url=#{WFONE_PUSH_NOTIFICATION_DATASOURCE_URL}
+wfone.datasource.username=#{WFONE_PUSH_NOTIFICATION_DATASOURCE_USERNAME}
+wfone.datasource.max.connections=#{WFONE_PUSH_NOTIFICATION_MAX_CONNECTIONS}
+wfone.push.item.expire.hours.evacuation=#{WFONE_PUSH_ITEM_EXPIRE_HOURS_EVAC}
+wfone.push.item.expire.hours.fire=#{WFONE_PUSH_ITEM_EXPIRE_HOURS_FIRE}
+wfone.push.item.expire.hours.ban=#{WFONE_PUSH_ITEM_EXPIRE_HOURS_BAN}
+wfone.push.item.expire.hours.restricted.area=#{WFONE_PUSH_ITEM_EXPIRE_HOURS_RESTRICTED_AREA}
+wfone.aws.sqs.queue.public.mobile.notification.url=#{WFONE_SQS_QUEUE_NOTIFICATION_URL}
+wfone.aws.sqs.queue.public.mobile.notification.monitor.attribute=#{WFONE_PUSH_NOTIFICATION_SQS_MONITOR_ATTRIBUTE}
+wfone.aws.sqs.queue.receive.max.num.messages=#{WFONE_PUSH_NOTIFICATION_SQS_MAX_MESSAGES}
+wfone.aws.sqs.queue.receive.wait.time.seconds=#{WFONE_PUSH_NOTIFICATION_SQS_WAIT_SECONDS}
+wfone.aws.sqs.queue.s3.bucket.name=#{WFONE_PM_SQS_S3_BUCKET_NAME}
+wfone.aws.access.key=#{WFONE_PUSH_NOTIFICATION_AWS_ACCESS_KEY}
+wfone.aws.secret.key=#{WFONE_PUSH_NOTIFICATION_AWS_SECRET_KEY}
+push.notification.event.consumer.interval.seconds=#{WFONE_PUSH_NOTIFICATION_CONSUMER_INTERVAL_SECONDS}
+push.notification.prefix=#{WFONE_PUSH_NOTIFICATION_PREFIX}
+firebase.db.url=#{WFONE_FIREBASE_DB_URL}
 
