--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -67,6 +67,92 @@ on:
         default: "wfnews-lambdas"
           
 
+      #PUSH-NOTIFICATION VARIABLES
+      WFONE_PUSH_NOTIFICATION_DATASOURCE_URL:
+        required: false
+        type: string
+        default: ""
+      WFONE_PM_SQS_S3_BUCKET_NAME:
+        required: false
+        type: string
+        default: ""
+      WFONE_PUSH_NOTIFICATION_DATASOURCE_USERNAME:
+        required: false
+        type: string
+        default: ""
+      WFONE_PUSH_NOTIFICATION_MAX_CONNECTIONS:
+        required: false
+        type: number
+        default: 25
+      WFONE_PUSH_NOTIFICATION_EXPIRE_HOURS:
+        required: false
+        type: number
+        default: 24
+      WFONE_SQS_QUEUE_NOTIFICATION_URL:
+        required: false
+        type: string
+        default: ""
+      WFONE_SQS_QUEUE_NOTIFICATION_URL_ACTIVE_FIRES:
+        required: false
+        type: string
+        default: ""
+      WFONE_SQS_QUEUE_NOTIFICATION_URL_BANS_PROHIBITIONS:
+        required: false
+        type: string
+        default: ""
+      WFONE_SQS_QUEUE_NOTIFICATION_URL_AREA_RESTRICTIONS:
+        required: false
+        type: string
+        default: ""
+      WFONE_SQS_QUEUE_NOTIFICATION_URL_EVAC_ORDERS:
+        required: false
+        type: string
+        default: ""
+      WFONE_PUSH_NOTIFICATION_SQS_MONITOR_ATTRIBUTE:
+        required: false
+        type: string
+        default: ""
+      WFONE_PUSH_NOTIFICATION_SQS_MAX_MESSAGES:
+        required: false
+        type: number
+        default: 10
+      WFONE_PUSH_NOTIFICATION_SQS_WAIT_SECONDS:
+        required: false
+        type: number
+        default: 20
+      WFONE_PUSH_NOTIFICATION_CONSUMER_INTERVAL_SECONDS:
+        required: false
+        type: number
+        default: 120
+      WFONE_PUSH_ITEM_EXPIRE_HOURS_EVAC:
+        required: false
+        type: number
+        default: 24
+      WFONE_PUSH_ITEM_EXPIRE_HOURS_FIRE:
+        required: false
+        type: number
+        default: 48
+      WFONE_PUSH_ITEM_EXPIRE_HOURS_BAN:
+        required: false
+        type: number
+        default: 8760
+      WFONE_PUSH_ITEM_EXPIRE_HOURS_RESTRICTED_AREA:
+        required: false
+        type: number
+        default: 8760
+      WFONE_FIREBASE_DB_URL:
+        required: false
+        type: string
+        default: ""
+      WFONE_PUSH_NOTIFICATION_PREFIX:
+        required: false
+        type: string
+        default: ""
+      WFONE_PUSH_NOTIFICATION_NEAR_ME_INTERVAL_SECONDS:
+        required: false
+        type: number
+        default: 300
+
     secrets:
       # AWS_ACCESS_KEY_ID:
       #   required: true
@@ -96,7 +182,15 @@ on:
         required: true
       WEBADE_OAUTH2_CLIENT_SECRET:
         required: true
-
+      WFONE_PUSH_NOTIFICATION_AWS_ACCESS_KEY:
+        required: true 
+      WFONE_PUSH_NOTIFICATION_AWS_SECRET_KEY: 
+        required: true 
+      WFONE_PUSH_NOTIFICATION_DATASOURCE_PASSWORD: 
+        required: true
+      WFONE_DB_PASS: 
+        required: true 
+        
 env:
   TF_VERSION: 1.5.3
   TG_VERSION: 0.48.4
@@ -254,6 +348,33 @@ jobs:
           WFONE_NOTIFICATIONS_API_WEBADE_OAUTH2_REST_CLIENT_SECRET: ${{secrets.WFONE_NOTIFICATIONS_API_WEBADE_OAUTH2_REST_CLIENT_SECRET}}
           WFONE_NOTIFICATIONS_API_WEBADE_OAUTH2_WFIM_CLIENT_ID: ${{vars.WFONE_NOTIFICATIONS_API_WEBADE_OAUTH2_CLIENT_ID}}
           WFONE_NOTIFICATIONS_API_IMAGE: ${{vars.REGISTRY}}/${{ github.repository_owner }}/${{ vars.NOTIFICATIONS_API_IMAGE }}:${{ inputs.IMAGE_TAG }}
+
+          #WFONE-PUSH-NOTIFICATION-API 
+          WFONE_PUSH_NOTIFICATION_DATASOURCE_URL: ${{ vars.WFONE_PUSH_NOTIFICATION_DATASOURCE_URL }}
+          WFONE_PUSH_NOTIFICATION_DATASOURCE_USERNAME: ${{ vars.WFONE_PUSH_NOTIFICATION_DATASOURCE_USERNAME }}
+          WFONE_PM_SQS_S3_BUCKET_NAME: ${{ vars.WFONE_PM_SQS_S3_BUCKET_NAME }}
+          WFONE_PUSH_NOTIFICATION_MAX_CONNECTIONS:  ${{ vars.WFONE_PUSH_NOTIFICATION_MAX_CONNECTIONS }}
+          WFONE_PUSH_NOTIFICATION_EXPIRE_HOURS:  ${{ vars.WFONE_PUSH_NOTIFICATION_EXPIRE_HOURS }}
+          WFONE_SQS_QUEUE_NOTIFICATION_URL: ${{ vars.WFONE_SQS_QUEUE_NOTIFICATION_URL }}
+          WFONE_SQS_QUEUE_NOTIFICATION_URL_ACTIVE_FIRES: ${{ vars.WFONE_SQS_QUEUE_NOTIFICATION_URL_ACTIVE_FIRES }}
+          WFONE_SQS_QUEUE_NOTIFICATION_URL_BANS_PROHIBITIONS: ${{ vars.WFONE_SQS_QUEUE_NOTIFICATION_URL_BANS_PROHIBITIONS }}
+          WFONE_SQS_QUEUE_NOTIFICATION_URL_AREA_RESTRICTIONS: ${{ vars.WFONE_SQS_QUEUE_NOTIFICATION_URL_AREA_RESTRICTIONS }}
+          WFONE_SQS_QUEUE_NOTIFICATION_URL_EVAC_ORDERS: ${{ vars.WFONE_SQS_QUEUE_NOTIFICATION_URL_EVAC_ORDERS }}
+          WFONE_PUSH_NOTIFICATION_SQS_MONITOR_ATTRIBUTE: ${{ vars.WFONE_PUSH_NOTIFICATION_SQS_MONITOR_ATTRIBUTE }}
+          WFONE_PUSH_NOTIFICATION_SQS_MAX_MESSAGES: ${{ vars.WFONE_PUSH_NOTIFICATION_SQS_MAX_MESSAGES }}
+          WFONE_PUSH_NOTIFICATION_SQS_WAIT_SECONDS: ${{ vars.WFONE_PUSH_NOTIFICATION_SQS_WAIT_SECONDS }}
+          WFONE_PUSH_NOTIFICATION_CONSUMER_INTERVAL_SECONDS: ${{ vars.WFONE_PUSH_NOTIFICATION_CONSUMER_INTERVAL_SECONDS }}
+          WFONE_PUSH_ITEM_EXPIRE_HOURS_EVAC: ${{ vars.WFONE_PUSH_ITEM_EXPIRE_HOURS_EVAC }}
+          WFONE_PUSH_ITEM_EXPIRE_HOURS_FIRE: ${{ vars.WFONE_PUSH_ITEM_EXPIRE_HOURS_FIRE }}
+          WFONE_PUSH_ITEM_EXPIRE_HOURS_BAN: ${{ vars.WFONE_PUSH_ITEM_EXPIRE_HOURS_BAN }}
+          WFONE_PUSH_ITEM_EXPIRE_HOURS_RESTRICTED_AREA: ${{ vars.WFONE_PUSH_ITEM_EXPIRE_HOURS_RESTRICTED_AREA }}
+          WFONE_FIREBASE_DB_URL: ${{ vars.WFONE_FIREBASE_DB_URL }}
+          WFONE_PUSH_NOTIFICATION_PREFIX: ${{ vars.DEFAULT_APPLICATION_ENVIRONMENT }}
+          WFONE_PUSH_NOTIFICATION_NEAR_ME_INTERVAL_SECONDS: ${{ vars.WFONE_PUSH_NOTIFICATION_NEAR_ME_INTERVAL_SECONDS }}
+          WFONE_PUSH_NOTIFICATION_AWS_ACCESS_KEY: ${{ secrets.WFONE_PUSH_NOTIFICATION_AWS_ACCESS_KEY }}
+          WFONE_PUSH_NOTIFICATION_AWS_SECRET_KEY: ${{ secrets.WFONE_PUSH_NOTIFICATION_AWS_SECRET_KEY }}
+          WFONE_PUSH_NOTIFICATION_DATASOURCE_PASSWORD: ${{ secrets.WFONE_PUSH_NOTIFICATION_DATASOURCE_PASSWORD }}
+          WFONE_DB_PASS: ${{ secrets.WFONE_DB_PASS }}
 
         run: terragrunt apply --terragrunt-non-interactive -auto-approve
 
