--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -93,6 +93,8 @@ on:
         required: true
       WEATHER_PASSWORD:
         required: true
+      WEBADE_OAUTH2_CLIENT_SECRET:
+        required: true
         
 env:
   TF_VERSION: 1.5.3
