Change application.properties files

--- a/server/wfss-pointid-api/wfss-pointid-api-rest-endpoints/src/main/resources/application.properties
+++ b/server/wfss-pointid-api/wfss-pointid-api-rest-endpoints/src/main/resources/application.properties
@@ -1,38 +1,38 @@
 # Point ID properties
 
-wfgs.url=#{cfg_wfgs_url}
-bcgw.url=#{cfg_bcgw_url}
-wfArcGis.url=#{cfg_wfArcGis_url}
+wfgs.url=#{WFGS_URL}
+bcgw.url=#{BCGW_URL}
+wfArcGis.url=#{WFARCGIS_URL}
 
-wfArcGis.layer.Area.Restrictions=#{cfg_wfArcGis_layer_Area_Restrictions}
-wfArcGis.layer.Bans.Prohibition.Areas=#{cfg_wfArcGis_layer_Bans_Prohibition_Areas}
-wfArcGis.layer.Danger.Rating=#{cfg_wfArcGis_layer_Danger_Rating}
-wfArcGis.layer.ActiveFires=#{cfg_wfArcGis_layer_ActiveFires}
-wfArcGis.layer.Evacuation.Orders.Alerts=#{cfg_wfArcGis_layer_Evacuation_Orders_Alerts}
-wfArcGis.layer.Fire.Centre.Boundaries=#{cfg_wfArcGis_layer_Fire_Centre_Boundaries}
+wfArcGis.layer.Area.Restrictions=#{WFARCGIS_LAYER_AREA_RESTRICTIONS}
+wfArcGis.layer.Bans.Prohibition.Areas=#{WFARCGIS_LAYER_BANS_PROHIBITION_AREAS}
+wfArcGis.layer.Danger.Rating=#{WFARCGIS_LAYER_DANGER_RATING}
+wfArcGis.layer.ActiveFires=#{WFARCGIS_LAYER_ACTIVE_FIRES}
+wfArcGis.layer.Evacuation.Orders.Alerts=#{WFARCGIS_LAYER_EVACUATION_ORDERS_ALERTS}
+wfArcGis.layer.Fire.Centre.Boundaries=#{WFARGIS_LAYER_FIRE_CENTRE_BOUNDARIES}
 
-wfArcGis.queueSize=#{cfg_wfArcGis_queueSize}
+wfArcGis.queueSize=#{WFARCGIS_QUEUESIZE}
 
-weather.host=#{cfg_weather_host}
-max.allowed.radius=#{max_allowable_radius}
-async.job.interval=#{async_job_interval}
-async.job.ref.lat=#{async_ref_lat}
-async.job.ref.lon=#{async_ref_lon}
-async.job.ref.radius=#{async_ref_radius}
+weather.host=#{WEATHER_HOST}
+max.allowed.radius=#{MAX_ALLOWED_RADIUS}
+async.job.interval=#{ASYNC_JOB_INTERVAL}
+async.job.ref.lat=#{ASYNC_JOB_REF_LAT}
+async.job.ref.lon=#{ASYNC_JOB_REF_LONG}
+async.job.ref.radius=#{ASYNC_JOB_REF_RADIUS}
 
 #For oracle access
-database.weather.url=#{database_weather_url}
-database.weather.user=#{database_weather_user}
-database.weather.pwd=#{database_weather_pwd}
+database.weather.url=#{DATABASE_WEATHER_URL}
+database.weather.user=#{DATABASE_WEATHER_USER}
+database.weather.pwd=#{DATABASE_WEATHER_PWD}
 
 # WFWX Fireweather API access
-webade.oauth2.client.id=#{cfg_webade_oauth2_client_id}
-webade.oauth2.token.url=#{cfg_webade_oauth2_token_url}
-webade.oauth2.client.scopes=#{cfg_webade_oauth2_client_scopes}
-fireweather.baseUrl=#{cfg_fireweather_baseurl}
-fireweather.queueSize=#{cfg_fireweather_queueSize}
+webade.oauth2.client.id=#{WEBADE_OAUTH2_CLIENT_ID}
+webade.oauth2.token.url=#{WEBADE_OAUTH2_TOKEN_URL}
+webade.oauth2.client.scopes=#{WEBADE_OAUTH2_CLIENT_SCOPES}
+fireweather.baseUrl=#{FIREWEATHER_BASEURL}
+fireweather.queueSize=#{FIREWEATHER_QUEUESIZE}
 
 fireweather.stations.key=British_Columbia_Fire_Service_Weather_Stations
 
-wfnews.baseUrl=#{cfg_wfnews_baseurl}
-wfnews.queueSize=#{cfg_wfnews_queueSize}
+wfnews.baseUrl=#{WFNEWS_BASEURL}
+wfnews.queueSize=#{WFNEWS_QUEUESIZE}
