--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -113,11 +113,11 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
-      - name: retrieve lambda artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: lambda-functions
-          path: ${{env.TG_SRC_PATH}}/lambda-functions
+      # - name: retrieve lambda artifacts
+      #   uses: actions/download-artifact@v3
+      #   with:
+      #     name: lambda-functions
+      #     path: ${{env.TG_SRC_PATH}}/lambda-functions
 
       - uses: hashicorp/setup-terraform@v2
         with:
@@ -133,6 +133,10 @@ jobs:
         env:
           # AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID }}
           # AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+
+
+
+
           agolAreaRestrictions: ${{vars.AGOL_AREA_RESTRICTIONS}}
           agolBansAndProhibitions: ${{vars.AGOL_BANS_AND_PROHIBITIONS}}
           agolUrl: ${{vars.AGOL_URL}}
