--- a/.github/workflows/lambda-zip.yml
+++ b/.github/workflows/lambda-zip.yml
@@ -8,11 +8,16 @@ on:
       REGISTRY:
         required: true
         type: string
+      ENVIRONMENT:
+        required: true
+        type: string
   workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: ${{ inputs.ENVIRONMENT }}
     steps:
       - uses: actions/checkout@v2
         with:
