--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -61,7 +61,7 @@ jobs:
         env:
           GOOGLE_FILE: ${{ vars.GOOGLE_SERVICES_JSON_BASE64 }}
         run: |
-          echo -n "$GOOGLE_FILE" > GoogleServices.json
+          echo -n "$GOOGLE_FILE" > google-services.json
 
       - name: Get XML Info
         id: version
