Add google-services implementation

--- a/client/wfnews-war/src/main/angular/android/app/build.gradle
+++ b/client/wfnews-war/src/main/angular/android/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation project(':capacitor-cordova-android-plugins')
     implementation platform("com.google.firebase:firebase-bom:$firebaseVersion")
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.gms:google-services:4.3.15'
 }
 
 apply from: 'capacitor.build.gradle'
